начало стилизации главной и каталога (мобильная версия)

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,26 @@
-// Начните писать стили здесь
+@import "global/normalize.less";
+@import "global/global.less";
+@import "global/fonts.less";
+@import "global/variables.less";
+
+@import "blocks/general/page.less";
+@import "blocks/general/page-header.less";
+@import "blocks/general/main-nav.less";
+@import "blocks/general/site-list.less";
+@import "blocks/general/address.less";
+@import "blocks/general/page-footer.less";
+@import "blocks/general/social.less";
+@import "blocks/general/copyright.less";
+
+@import "blocks/index/page-main.less";
+@import "blocks/index/programs.less";
+@import "blocks/index/details.less";
+@import "blocks/index/example.less";
+@import "blocks/index/example-result.less";
+@import "blocks/index/slider.less";
+
+@import "blocks/catalog/catalog-main.less";
+@import "blocks/catalog/products.less";
+@import "blocks/catalog/products-big-list.less";
+@import "blocks/catalog/extra-products.less";
+@import "blocks/catalog/address-catalog.less";
