исправление стилизации главной и каталога для мобильной версии

--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -1,16 +1,8 @@
-.catalog-main {
-  margin: 0 auto;
-  &__heading {
-    font-family: "Oswald", Arial, sans-serif;
-    font-size: 36px;
-    line-height: 36px;
-    font-weight: 400px;
-    color: @basic-black;
-    text-align: left;
-    border-top: 1px solid @grey-border;
-    padding-left: 20px;
-    padding-top: 27px;
-    margin-bottom: 41px;
-    margin-top: 0px;
-  }
+.catalog-main__heading {
+  .heading;
+  border-top: 1px solid @grey-border;
+  padding-top: 27px;
+  padding-left: 20px;
+  margin-top: 0px;
+  margin-bottom: 41px;
 }
