--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -1,24 +1,23 @@
 .page-header {
-  margin: 0 auto;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   align-items: center;
   position: relative;
-  width: 320px;
   padding-bottom: 0px;
+}
 
-  &__logo {
-    margin-right: 56px;
-    padding-left: 20px;
-    padding-bottom: 16px;
-    padding-top: 16px;
-  }
+.page-header__logo {
+  margin-right: 56px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 20px;
 
-  &__title {
-    text-transform: uppercase;
-    text-align: center;
-    color: @black-text;
-    margin-right: 45px;
-  }
+}
+
+.page-header__title {
+  text-transform: uppercase;
+  text-align: center;
+  color: @black-text;
+  margin-right: 45px;
 }
