--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -1,54 +1,52 @@
 .social {
   padding: 0 20px;
-  margin: 0 auto;
+}
 
-  &__list {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
-    padding-top: 23px;
-    padding-bottom: 24px;
-    padding-left: 70px;
-    padding-right: 70px;
-    margin-bottom: 22px;
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    align-items: center;
-    border-top: 1px solid @grey-line;
-    border-bottom: 1px solid @grey-line;
-    width: 130px;
-  }
+.social__list {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 130px;
+  padding-top: 23px;
+  padding-right: 70px;
+  padding-bottom: 24px;
+  padding-left: 70px;
+  margin-bottom: 22px;
+  border-top: 1px solid @grey-line;
+  border-bottom: 1px solid @grey-line;
+}
 
-  &__item {
-    margin-right: 33px;
-    margin-bottom: 5px;
-  }
-
-  &__item:nth-child(3n) {
+.social__item {
+  margin-right: 33px;
+  margin-bottom: 5px;
+  &:nth-child(3n) {
     margin-right: 0px;
   }
+}
 
-  &__link {
-    display: block;
-    background-color: @grey-icon;
-  }
-
-  &__link--vkontakte {
+.social__link {
+  display: block;
+  background-color: @grey-icon;
+  &--vkontakte {
     width: 23px;
     height: 16px;
   }
 
-  &__link--instagram {
+  &--instagram {
     width: 16px;
     height: 16px;
   }
 
-  &__link--facebook {
+  &--facebook {
     width: 22px;
     height: 22px;
   }
-
 }
+
+
 
 
