--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -1,26 +1,16 @@
-.page-main {
-  margin: 0 auto;
-  &__heading, &__slogan {
-    font-family: "Oswald", Arial, sans-serif;
-    font-weight: 400px;
-    color: @basic-white;
-    text-align: center;
-    background-color: @green;
-    margin-top: 0px;
-  }
-  &__heading {
-    font-size: 36px;
-    line-height: 36px;
-    padding-top: 27px;
-    padding-bottom: 25px;
-    margin-bottom: 0px;
-  }
+.page-main__heading {
+  .heading;
+  .white-heading;
+  padding-top: 27px;
+  padding-bottom: 25px;
+  margin-bottom: 0px;
+}
 
-  &__slogan {
-    font-size: 14px;
-    line-height: 14px;
-    text-transform: uppercase;
-    padding-bottom: 29px;
-    margin-top: 0px;
-  }
+.page-main__slogan {
+  .heading;
+  .white-heading;
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: uppercase;
+  padding-bottom: 29px;
 }
