--- a/source/less/blocks/index/slider.less
+++ b/source/less/blocks/index/slider.less
@@ -1,19 +1,19 @@
 .slider {
   padding-bottom: 25px;
-  &__list {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
-  }
+}
 
-  &__item--after {
-    display: none;
-  }
+.slider__list {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
 
-  &__photo {
-    margin-bottom: 23px;
-  }
+.slider__item--after {
+  display: none;
+}
 
+.slider__photo {
+  margin-bottom: 23px;
 }
 
 
