--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -1,90 +1,70 @@
-.products {
 
-  &__list {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
+.products__list {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
 
-  &__item {
-    padding-left: 20px;
-    padding-right: 20px;
-    border-top: 1px solid @grey-border;
-  }
+.products__item {
+  padding: 0 20px;
+  border-top: 1px solid @grey-border;
+}
 
-  &__card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    padding-top: 19px;
-  }
+.products__card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  padding-top: 19px;
+}
 
-  &__wrapper--photo {
-    margin-right: 30px;
-  }
+.products__wrapper--photo {
+  margin-right: 30px;
+}
 
-  &__name-link {
-    display: block;
-    font-family: "Oswald", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: uppercase;
-    font-weight: 400px;
-    text-align: left;
-    color: @special-dark-text;
-    width: 76px;
-    margin-bottom: 14px;
-  }
+.products__name-link {
+  display: block;
+  font-family: @font-oswald;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-weight: 400;
+  text-align: left;
+  color: @special-dark-text;
+  width: 76px;
+  margin-bottom: 14px;
+}
 
-  &__info {
-    font-family: Arial, sans-serif;
-    font-size: 12px;
-    line-height: 16px;
-    color: @special-dark-grey;
-    margin-bottom: 22px;
-    width: 142px;
-
-  }
-
-  &__data {
-    text-align: left;
-    padding-right: 20px;
-  }
-
-  &__value {
-    text-align: right;
-    padding-left: 30px;
-  }
-
-  &__value--price {
-    text-transform: uppercase;
-  }
-
-
-  &__link {
-    display: block;
-    font-family: "Oswald", Arial, sans-serif;
-    font-size: 16px;
-    text-transform: uppercase;
-    font-weight: 400px;
-    color: @basic-white;
-    text-align: center;
-    background-color: @green;
-    width: 62px;
-    padding: 10px 109px;
-    margin-bottom: 25px;
-  }
+.products__info {
+  font-size: 12px;
+  line-height: 16px;
+  margin-bottom: 22px;
+  width: 142px;
 
 }
 
+.products__data {
+  text-align: left;
+  padding-right: 20px;
+}
 
+.products__value {
+  text-align: right;
+  padding-left: 30px;
+  &--price {
+    text-transform: uppercase;
+  }
+}
 
-
-
-
+.products__link {
+  .green-button;
+  font-size: 16px;
+  width: 62px;
+  padding: 10px 109px;
+  margin-bottom: 25px;
+}
 
 
 
