--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -1,34 +1,27 @@
-.address {
-  &__wrapper {
-    padding: 0 20px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.address__wrapper {
+  padding: 0 20px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  &--catalog {
+    background-color: @basic-grey;
   }
-
-  &__text {
-    font-family: "Oswald", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 18px;
-    color: @black-text;
-    text-transform: uppercase;
-    width: 140px;
-  }
-
-  &__info {
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    line-height: 20px;
-    color: @special-dark-grey;
-    width: 140px;
-  }
-
 }
 
+.address__text {
+  font-family: @font-oswald;
+  font-size: 16px;
+  line-height: 18px;
+  color: @black-text;
+  text-transform: uppercase;
+  width: 140px;
+}
 
-
-
+.address__info {
+  line-height: 20px;
+  width: 140px;
+}
 
 
 
