--- a/source/less/blocks/general/page.less
+++ b/source/less/blocks/general/page.less
@@ -1,12 +1,17 @@
 .page {
   height: 100%;
-  
-  &__body {
-    width: 320px;
-    margin: 0;
-    padding: 0;
-    background-color: @basic-white;
-    font-family: Arial, sans-serif;
-    color: @special-dark-grey;
-  }
 }
+
+.page__body {
+  width: @mobile-width;
+  padding: 0;
+  margin: 0 auto;
+  background-color: @basic-white;
+  font-family: @font-arial;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  text-align: left;
+  color: @special-dark-grey;
+}
+
