--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -1,30 +1,19 @@
 .site-list {
   list-style: none;
   padding: 0px;
-  margin: 0 auto;
+  margin: 0px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 320px;
-  
+}
 
-  &__item, &__item a {
-    font-family: "Oswald", Arial, sans-serif;
-    font-size: 20px;
-    line-height: 20px;
-    font-weight: 500px;
-    color: @basic-black;
-    text-transform: uppercase;
-    text-align: center;
-  }
+.site-list__item {
+  border-top: 1px solid @grey-border;
+}
 
-  &__item {
-    border-top: 1px solid @grey-border;
-  }
-
-  &__item a {
-    display: block;
-    padding-top: 22px;
-    padding-bottom: 24px;
-  }
+.site-list__item a {
+  display: block;
+  color: @basic-black;
+  padding-top: 22px;
+  padding-bottom: 24px;
 }
