--- a/source/less/blocks/index/example-result.less
+++ b/source/less/blocks/index/example-result.less
@@ -3,46 +3,43 @@
   justify-content: flex-start;
   align-items: center;
   margin-bottom: 30px;
+}
 
-  &__item {
-    margin-right: 30px;
-    width: 124px;
-    border: 1px solid @special-grey;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-  }
+.example-result__item {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 124px;
+  margin-right: 30px;
+  border: 1px solid @special-grey;
+  border-radius: 5px;
 
-  &__item:nth-child(2n) {
+  &:nth-child(2n) {
     margin-right: 0px;
-  }
-
-  &__count {
-    font-family: "Oswald", Arial, sans-serif;
-    font-size: 24px;
-    line-height: 24px;
-    padding-top: 14px;
-    margin-top: 0px;
-    color: @basic-black;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  &__text {
-    font-family: Arial, sans-serif;
-    font-size: 12px;
-    line-height: 12px;
-    color: @special-dark-grey;
-    text-align: center;
-    width: 60px;
-    margin-bottom: 0px;
-    padding: 10px;
-    background-color: @bg-grey;
-    position: absolute;
-    top: 260px;
   }
 }
 
+.example-result__count {
+  font-family: @font-oswald;
+  font-size: 24px;
+  line-height: 24px;
+  color: @basic-black;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 14px;
+  margin-top: 0px;
+}
+
+.example-result__text {
+  font-size: 12px;
+  line-height: 12px;
+  text-align: center;
+  width: 60px;
+  margin-bottom: 0px;
+  padding: 10px;
+  background-color: @bg-grey;
+  position: absolute;
+  top: 260px;
+}
 
