--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -1,36 +1,27 @@
 .example {
-  background-color: @bg-grey;
   padding: 0 20px;
-  margin: 0 auto;
   position: relative;
+  background-color: @bg-grey;
 
-  &__heading {
-    font-family: "Oswald", Arial, sans-serif;
-    font-size: 36px;
-    line-height: 40px;
-    font-weight: 400px;
-    color: @basic-black;
-    padding-top: 27px;
-  }
+}
 
-  &__description {
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    line-height: 18px;
-    color: @special-dark-grey;
-    text-align: left;
-    margin-bottom: 25px;
-    width: 279px;
-  }
+.example__heading {
+  .heading;
+  line-height: 40px;
+  padding-top: 27px;
+}
 
-  &__costs {
-    font-family: "Oswald", Arial, sans-serif;
-    font-size: 14px;
-    line-height: 20px;
-    color: @basic-black;
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 42px;
-  }
+.example__description {
+  .text;
+  margin-bottom: 25px;
+  width: 279px;
+}
 
+.example__costs {
+  .heading;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 42px;
 }
