--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -1,8 +1,8 @@
 .catalog-main__heading {
-  .heading;
+  .page-heading;
   border-top: 1px solid @grey-border;
   padding-top: 27px;
   padding-left: 20px;
-  margin-top: 0px;
+  margin-top: 0;
   margin-bottom: 41px;
 }
