--- a/source/less/blocks/catalog/products-big-list.less
+++ b/source/less/blocks/catalog/products-big-list.less
@@ -1,17 +1,16 @@
 .products-big-list {
   border-top: 1px solid @grey-border;
   border-bottom: 1px solid @grey-border;
-  padding: 0 20px;
+  padding: 0;
   padding-top: 79px;
 }
 
 .products-big-list__text {
   font-size: 12px;
   line-height: 16px;
-  font-weight: 400;
   text-align: center;
   &--bold {
-    font-family: @font-oswald;
+    font-family: @decor-font;
     font-size: 16px;
     line-height: 20px;
     text-transform: uppercase;
@@ -20,8 +19,7 @@
 }
 
 .products-big-list__link {
-  .green-button;
-  font-size: 16px;
+  .button;
   color: @special-dark-grey;
   width: 91px;
   padding: 10px 94px;
