--- a/source/less/blocks/general/page.less
+++ b/source/less/blocks/general/page.less
@@ -5,13 +5,12 @@
 .page__body {
   width: @mobile-width;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
   background-color: @basic-white;
-  font-family: @font-arial;
+  font-family: @base-font;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
-  text-align: left;
   color: @special-dark-grey;
 }
 
