--- a/source/less/blocks/index/details.less
+++ b/source/less/blocks/index/details.less
@@ -1,5 +1,5 @@
 .details {
-  padding: 0 20px;
+
 }
 
 .details__heading {
@@ -9,8 +9,8 @@
 
 .details__list {
   list-style: none;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .details__item {
@@ -23,7 +23,7 @@
     width: 60px;
     height: 60px;
     background-color: @green;
-    left: 0px;
+    left: 0;
   }
 }
 
