--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -1,15 +1,14 @@
 
 .products__list {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
 }
 
 .products__item {
-  padding: 0 20px;
   border-top: 1px solid @grey-border;
 }
 
@@ -26,12 +25,10 @@
 
 .products__name-link {
   display: block;
-  font-family: @font-oswald;
+  font-family: @decor-font;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
-  font-weight: 400;
-  text-align: left;
   color: @special-dark-text;
   width: 76px;
   margin-bottom: 14px;
@@ -46,7 +43,6 @@
 }
 
 .products__data {
-  text-align: left;
   padding-right: 20px;
 }
 
@@ -59,8 +55,7 @@
 }
 
 .products__link {
-  .green-button;
-  font-size: 16px;
+  .button;
   width: 62px;
   padding: 10px 109px;
   margin-bottom: 25px;
