--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -1,6 +1,4 @@
 .address__wrapper {
-  padding: 0 20px;
-  margin: 0 auto;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -10,7 +8,7 @@
 }
 
 .address__text {
-  font-family: @font-oswald;
+  font-family: @decor-font;
   font-size: 16px;
   line-height: 18px;
   color: @black-text;
