--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -1,5 +1,5 @@
 .main-nav {
-  font-family: @font-oswald;
+  font-family: @decor-font;
   font-size: 20px;
   line-height: 20px;
   font-weight: 500;
