--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -4,14 +4,14 @@
   flex-wrap: wrap;
   align-items: center;
   position: relative;
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 .page-header__logo {
-  margin-right: 56px;
   padding-top: 16px;
   padding-bottom: 16px;
   padding-left: 20px;
+  margin-right: 56px;
 
 }
 
