--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -1,11 +1,10 @@
 .social {
-  padding: 0 20px;
 }
 
 .social__list {
   list-style: none;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
