--- a/source/less/blocks/index/example-result.less
+++ b/source/less/blocks/index/example-result.less
@@ -16,19 +16,19 @@
   border-radius: 5px;
 
   &:nth-child(2n) {
-    margin-right: 0px;
+    margin-right: 0;
   }
 }
 
 .example-result__count {
-  font-family: @font-oswald;
+  font-family: @decor-font;
   font-size: 24px;
   line-height: 24px;
   color: @basic-black;
   text-align: center;
   text-transform: uppercase;
   padding-top: 14px;
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 .example-result__text {
@@ -36,7 +36,7 @@
   line-height: 12px;
   text-align: center;
   width: 60px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   padding: 10px;
   background-color: @bg-grey;
   position: absolute;
