--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -1,14 +1,14 @@
 .page-main__heading {
-  .heading;
-  .white-heading;
+  .page-heading;
+  .index-heading;
   padding-top: 27px;
   padding-bottom: 25px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .page-main__slogan {
   .heading;
-  .white-heading;
+  .index-heading;
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
