--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,11 +1,10 @@
 .programs {
-  padding: 0 20px;
+  font-family: @decor-font;
 }
 
 .programs__button {
-  .green-button;
+  .button;
   font-size: 14px;
-  line-height: 18px;
   width: 192px;
   padding: 7px 44px;
   margin-bottom: 22px;
@@ -13,8 +12,8 @@
 
 .programs__list {
   list-style: none;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .programs__card {
@@ -23,10 +22,9 @@
 }
 
 .programs__title {
-  .heading;
+  .black-uppercase-text;
   font-size: 24px;
   line-height: 37px;
-  text-transform: uppercase;
   padding-top: 30px;
   padding-left: 91px;
   position: relative;
@@ -46,16 +44,15 @@
 .programs__description {
   width: 240px;
   padding-bottom: 23px;
-  margin: 0 auto;
   border-bottom: 1px solid @grey-line;
 }
 
+
 .programs__link {
-  .heading;
+  .black-uppercase-text;
   display: block;
   font-size: 16px;
   line-height: 16px;
-  text-transform: uppercase;
   padding-top: 19px;
   padding-bottom: 22px;
   padding-left: 19px;
@@ -74,8 +71,8 @@
   &::after {
     position: absolute;
     content: "";
-    width: 0px;
-    height: 0px;
+    width: 0;
+    height: 0;
     left: 135px;
     top: 21px;
     background-color: transparent;
