исправления по замечаниям

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -18,6 +18,7 @@
 
 
 // fonts //
+
 @base-font: Arial, Helvetica, sans-serif;
 @decor-font: "Oswald", @base-font;
 
@@ -29,8 +30,12 @@
 @desktop-width: 1200px;
 
 
-
 // mixin //
+
+.container() {
+  margin: 0 auto;
+  padding: 0 20px;
+}
 
 .page-heading() {
   font-family: @decor-font;
