--- a/source/less/blocks/general/page.less
+++ b/source/less/blocks/general/page.less
@@ -4,8 +4,7 @@
 
 .page__body {
   width: @mobile-width;
-  padding: 0;
-  margin: 0;
+  margin-left: 0;
   background-color: @basic-white;
   font-family: @base-font;
   font-size: 14px;
