исправление стилизации главной и каталога

--- a/source/less/blocks/catalog/products-big-list.less
+++ b/source/less/blocks/catalog/products-big-list.less
@@ -1,19 +1,14 @@
 .products-big-list {
-  border-top: 1px solid @grey-border;
-  border-bottom: 1px solid @grey-border;
   padding: 0;
   padding-top: 79px;
 }
 
 .products-big-list__text {
-  font-size: 12px;
-  line-height: 16px;
+  .product-info;
   text-align: center;
+
   &--bold {
-    font-family: @decor-font;
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: uppercase;
+    .product-name;
     color: @black-text;
   }
 }
