--- a/source/less/blocks/general/copyright.less
+++ b/source/less/blocks/general/copyright.less
@@ -1,10 +1,11 @@
-.copyright {
-}
-
 .copyright__link {
   display: block;
   font-size: 16px;
+  color: @special-dark-grey;
   position: relative;
+  padding-left: 0;
+  padding-right: 0;
+
   &::after {
     position: absolute;
     content: "";
@@ -12,9 +13,7 @@
     width: 27px;
     height: 34px;
     background-color: @grey-icon;
-    right: 10px;
+    right: 0;
     top: -5px;
   }
 }
-
-
