--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -3,21 +3,26 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   align-items: center;
-  position: relative;
   padding-bottom: 0;
 }
 
-.page-header__logo {
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 20px;
-  margin-right: 56px;
+.page-header__container {
+  position: relative;
+}
 
+.page-header__wrapper {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.page-header__logo {
+  margin-right: 56px;
 }
 
 .page-header__title {
   text-transform: uppercase;
   text-align: center;
   color: @black-text;
-  margin-right: 45px;
 }
