--- a/source/less/blocks/general/page.less
+++ b/source/less/blocks/general/page.less
@@ -3,13 +3,6 @@
 }
 
 .page__body {
-  width: @mobile-width;
-  margin-left: 0;
-  background-color: @basic-white;
-  font-family: @base-font;
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: 400;
-  color: @special-dark-grey;
+  min-height: 100%;
+  margin: 0 auto;
 }
-
