--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -1,26 +1,25 @@
 .example {
   position: relative;
   background-color: @bg-grey;
-
 }
 
 .example__heading {
-  .heading;
+  .page-heading;
   line-height: 40px;
   padding-top: 27px;
 }
 
 .example__description {
-  .text;
   margin-bottom: 25px;
   width: 279px;
 }
 
 .example__costs {
-  .heading;
+  .page-heading;
   font-size: 14px;
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
+  margin: 0 auto;
   margin-bottom: 42px;
 }
