--- a/source/less/blocks/catalog/extra-products.less
+++ b/source/less/blocks/catalog/extra-products.less
@@ -1,12 +1,12 @@
-
 .extra-products__heading {
-  .heading;
+  .page-heading;
   font-size: 24px;
   line-height: 24px;
   padding-left: 20px;
   padding-right: 0;
   margin-bottom: 35px;
   position: relative;
+
   &::after {
     position: absolute;
     content: "";
@@ -26,19 +26,16 @@
 }
 
 .extra-products__card {
-  width: 280px;
   border-top: 1px solid @grey-border;
-  &:last-child {
+
+  &--vitamins {
     border-bottom: 1px solid @grey-border;
   }
 }
 
-
 .extra-products__name {
-  font-family: @decor-font;
-  font-size: 16px;
+  .product-name;
   line-height: 16px;
-  text-transform: uppercase;
   color: @special-dark-text;
 }
 
@@ -62,7 +59,6 @@
 }
 
 .extra-products__text {
-  margin: 0 auto;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
@@ -75,5 +71,3 @@
   padding-right: 60px;
   margin-bottom: 35px;
 }
-
-
