--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -1,11 +1,9 @@
-.address {
-}
-
 .address__wrapper {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  &--catalog {
+
+  &--bg {
     background-color: @basic-grey;
   }
 }
@@ -23,8 +21,3 @@
   line-height: 20px;
   width: 140px;
 }
-
-
-
-
-
