--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -6,7 +6,6 @@
   color: @basic-black;
   text-transform: uppercase;
   text-align: center;
-  width: 100%;
 }
 
 .main-nav__toggle {
@@ -14,12 +13,13 @@
   border: none;
   width: 18px;
   height: 18px;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 40px;
   cursor: pointer;
   background-color: transparent;
 
-  &::before, &::after {
+  &::before,
+  &::after {
     position: absolute;
     content: "";
     background-color: @basic-black;
@@ -39,4 +39,3 @@
     transform: rotate(-45deg);
   }
 }
-
