--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -1,19 +1,10 @@
-.social {
-}
-
 .social__list {
   list-style: none;
-  padding: 0;
-  margin: 0;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   align-items: center;
-  width: 130px;
-  padding-top: 23px;
-  padding-right: 70px;
-  padding-bottom: 24px;
-  padding-left: 70px;
+  padding: 20px 75px;
   margin-bottom: 22px;
   border-top: 1px solid @grey-line;
   border-bottom: 1px solid @grey-line;
@@ -22,14 +13,16 @@
 .social__item {
   margin-right: 33px;
   margin-bottom: 5px;
+
   &:nth-child(3n) {
-    margin-right: 0px;
+    margin-right: 0;
   }
 }
 
 .social__link {
   display: block;
   background-color: @grey-icon;
+
   &--vkontakte {
     width: 23px;
     height: 16px;
@@ -45,7 +38,3 @@
     height: 22px;
   }
 }
-
-
-
-
