--- a/source/less/blocks/index/details.less
+++ b/source/less/blocks/index/details.less
@@ -1,9 +1,5 @@
-.details {
-
-}
-
 .details__heading {
-  .heading;
+  .page-heading;
   line-height: 40px;
 }
 
@@ -17,6 +13,7 @@
   padding-bottom: 26px;
   padding-left: 80px;
   position: relative;
+
   &::before {
     position: absolute;
     content: "";
@@ -26,4 +23,3 @@
     left: 0;
   }
 }
-
