--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,7 +1,3 @@
-.programs {
-  font-family: @decor-font;
-}
-
 .programs__button {
   .button;
   font-size: 14px;
@@ -17,15 +13,18 @@
 }
 
 .programs__card {
+  display: flex;
+  flex-direction: column;
   background-color: @basic-grey;
   margin-bottom: 20px;
 }
 
 .programs__title {
   .black-uppercase-text;
+  font-family: @decor-font;
   font-size: 24px;
   line-height: 37px;
-  padding-top: 30px;
+  margin-bottom: 20px;
   padding-left: 91px;
   position: relative;
 
@@ -34,37 +33,39 @@
     content: "";
     width: 50px;
     height: 53px;
-    left: 22px;
-    top: 21px;
+    left: 20px;
+    top: -10px;
     background-color: @green;
     border-radius: 50%;
   }
 }
 
 .programs__description {
-  width: 240px;
+  width: 227px;
+  margin-left: 20px;
   padding-bottom: 23px;
+  margin-bottom: 15px;
   border-bottom: 1px solid @grey-line;
 }
-
 
 .programs__link {
   .black-uppercase-text;
   display: block;
+  font-family: @decor-font;
   font-size: 16px;
   line-height: 16px;
-  padding-top: 19px;
-  padding-bottom: 22px;
-  padding-left: 19px;
+  margin-bottom: 18px;
+  margin-left: 20px;
   position: relative;
+
 
   &::before {
     position: absolute;
     content: "";
     width: 18px;
     height: 2px;
-    left: 119px;
-    top: 25px;
+    left: 100px;
+    top: 7px;
     background-color: @basic-black;
   }
 
@@ -73,14 +74,10 @@
     content: "";
     width: 0;
     height: 0;
-    left: 135px;
-    top: 21px;
+    left: 118px;
+    top: 3px;
     background-color: transparent;
     border: 5px solid transparent;
     border-left: 5px solid @basic-black;
   }
 }
-
-
-
-
