--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,3 +1,15 @@
+body {
+  min-width: @mobile-width;
+  margin: 0;
+  padding: 0;
+  font-family: @base-font;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @special-dark-grey;
+  background-color: @basic-white;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -7,9 +19,9 @@ img {
   position: absolute;
   width: 1px;
   height: 1px;
-  padding: 0px;
+  padding: 0;
   margin: -1px;
-  border: 0px;
+  border: 0;
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -18,4 +30,18 @@ img {
 
 a {
   text-decoration: none;
+}
+
+.container {
+  width: @mobile-width;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+}
+
+.wrapper {
+  width: 280px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
 }
