--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -1,11 +1,16 @@
+.address {
+  .container;
+
+  &--grey-bg {
+    background-color: @basic-grey;
+  }
+}
+
 .address__wrapper {
+  .wrapper;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  &--bg {
-    background-color: @basic-grey;
-  }
 }
 
 .address__text {
