--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -1,6 +1,11 @@
 .example {
-  position: relative;
+  .container;
   background-color: @bg-grey;
+  position: relative;
+}
+
+.example__wrapper {
+  .wrapper;
 }
 
 .example__heading {
@@ -20,6 +25,5 @@
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  margin: 0 auto;
   margin-bottom: 42px;
 }
