--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -11,6 +11,7 @@
 @bg-footer-grey: #ebebeb;
 @grey-icon: #666666;
 @grey-border: #e6e6e6;
+@grey-border-input: #e7e7e7;
 @hover-grey-border: #bababa;
 @grey-plus: #d3d3d3;
 @green: #68b738;
@@ -67,4 +68,17 @@
 .product-info() {
   font-size: 12px;
   line-height: 16px;
+}
+
+.container() {
+  width: @mobile-width;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+}
+
+.wrapper() {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
 }
