--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -1,4 +1,5 @@
 .products {
+  .container;
   border-top: 1px solid @grey-border;
   border-bottom: 1px solid @grey-border;
 }
@@ -13,23 +14,25 @@
 }
 
 .products__item {
+  .wrapper;
   border-bottom: 1px solid @grey-border;
 }
 
 .products__card {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding-top: 19px;
 }
 
 .products__wrapper--photo {
-  margin-right: 30px;
+  width: 140px;
+  height: 112px;
 }
 
 .products__name-link {
-  display: block;
   .product-name;
+  display: block;
   color: @special-dark-text;
   width: 76px;
   margin-bottom: 14px;
@@ -38,7 +41,7 @@
 .products__info {
   .product-info;
   margin-bottom: 22px;
-  width: 142px;
+  width: 140px;
 }
 
 .products__data {
