--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -1,10 +1,10 @@
 .page-footer {
+  .container;
   background-color: @bg-footer-grey;
   padding-bottom: 32px;
 }
 
 .page-footer__heading {
-  margin: 0 auto;
   text-align: center;
   color: @black-text;
   text-transform: uppercase;
