--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -1,8 +1,7 @@
 .page-header {
+  .container;
   display: flex;
-  justify-content: flex-start;
   flex-wrap: wrap;
-  align-items: center;
   padding-bottom: 0;
 }
 
@@ -11,6 +10,7 @@
 }
 
 .page-header__wrapper {
+  .wrapper;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
