--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -1,10 +1,15 @@
+.social {
+  .wrapper;
+}
+
 .social__list {
   list-style: none;
+  padding: 20px 0;
+  margin: 0;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  padding: 20px 75px;
   margin-bottom: 22px;
   border-top: 1px solid @grey-line;
   border-bottom: 1px solid @grey-line;
