--- a/source/less/blocks/index/example-result.less
+++ b/source/less/blocks/index/example-result.less
@@ -1,7 +1,8 @@
 .example-result {
+  .wrapper;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -13,9 +14,10 @@
   margin-bottom: 25px;
   border: 1px solid @special-grey;
   border-radius: 5px;
+  margin-right: 30px;
 
-  &--weight {
-    margin-right: 30px;
+  &:nth-child(2) {
+    margin-right: 0;
   }
 }
 
