--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,6 +1,7 @@
 body {
   min-width: @mobile-width;
-  margin: 0;
+  min-height: 100%;
+  margin: 0 auto;
   padding: 0;
   font-family: @base-font;
   font-size: 14px;
@@ -30,18 +31,4 @@ img {
 
 a {
   text-decoration: none;
-}
-
-.container {
-  width: @mobile-width;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0 auto;
-}
-
-.wrapper {
-  width: 280px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0 auto;
 }
