убрала лишние отступы, исправления по замечаниям

--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -1,5 +1,10 @@
-.catalog-main__heading {
+.catalog-main {
   .container;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.catalog-main__heading {
   .page-heading;
   border-top: 1px solid @grey-border;
   padding-top: 27px;
