--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -1,5 +1,7 @@
 .page-footer {
   .container;
+  padding-left: 0;
+  padding-right: 0;
   background-color: @bg-footer-grey;
   padding-bottom: 32px;
 }
