--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -1,5 +1,7 @@
-.page-main__container {
+.page-main {
   .container;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .page-main__heading {
@@ -11,10 +13,12 @@
 }
 
 .page-main__slogan {
-  .page-heading;
-  .index-heading;
-  font-size: 14px;
+  font-family: @decor-font;
   line-height: 14px;
   text-transform: uppercase;
   padding-bottom: 29px;
+  color: @basic-white;
+  text-align: center;
+  background-color: @green;
+  margin-top: 0;
 }
