исправление стилизации главной страницы

--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -12,7 +12,6 @@
 }
 
 .address__text {
-  font-family: @decor-font;
   font-size: 16px;
   line-height: 18px;
   color: @black-text;
@@ -21,6 +20,7 @@
 }
 
 .address__info {
+  font-family: @base-font;
   line-height: 20px;
   width: 140px;
 }
