--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -1,22 +1,14 @@
 .page-header {
-  .container;
-  padding-left: 0;
-  padding-right: 0;
-  display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 0;
-}
-
-.page-header__container {
+  margin: 0 auto;
+  width: @mobile-width;
   position: relative;
 }
 
 .page-header__wrapper {
   .wrapper;
   display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
   align-items: center;
+  padding-top: 12px;
 }
 
 .page-header__logo {
@@ -27,4 +19,5 @@
   text-transform: uppercase;
   text-align: center;
   color: @black-text;
+  width: 101px;
 }
