--- a/source/less/blocks/index/details.less
+++ b/source/less/blocks/index/details.less
@@ -1,4 +1,4 @@
-.details__wrapper {
+.details {
   .wrapper;
 }
 
@@ -14,6 +14,7 @@
 }
 
 .details__item {
+  .description;
   padding-bottom: 26px;
   padding-left: 80px;
   position: relative;
