--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -1,6 +1,7 @@
 .example {
   background-color: @bg-grey;
   position: relative;
+  margin: 0 auto;
 }
 
 .example__wrapper {
@@ -14,6 +15,7 @@
 }
 
 .example__description {
+  .description;
   margin-bottom: 25px;
   width: 279px;
 }
