--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -1,24 +1,22 @@
 .page-main {
-  .container;
-  padding-left: 0;
-  padding-right: 0;
+  width: @mobile-width;
+  margin: 0 auto;
+}
+
+.page-main__title {
+  color: @basic-white;
+  text-align: center;
+  background-color: @green;
+  padding-top: 27px;
 }
 
 .page-main__heading {
   .page-heading;
-  .index-heading;
-  padding-top: 27px;
-  padding-bottom: 25px;
-  margin-bottom: 0;
+  padding: 0 35px;
 }
 
 .page-main__slogan {
-  font-family: @decor-font;
   line-height: 14px;
   text-transform: uppercase;
   padding-bottom: 29px;
-  color: @basic-white;
-  text-align: center;
-  background-color: @green;
-  margin-top: 0;
 }
