--- a/source/less/blocks/catalog/extra-products.less
+++ b/source/less/blocks/catalog/extra-products.less
@@ -25,7 +25,8 @@
 }
 
 .extra-products__item {
-  .wrapper;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .extra-products__name {
@@ -54,7 +55,6 @@
 }
 
 .extra-products__text {
-  .wrapper;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
