--- a/source/less/blocks/general/copyright.less
+++ b/source/less/blocks/general/copyright.less
@@ -1,10 +1,11 @@
 .copyright__link {
-  .wrapper;
-  font-size: 16px;
-  color: @special-dark-grey;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  font-family: @base-font;
+  font-size: 16px;
+  color: @special-dark-grey;
 
   &::after {
     content: "";
