--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -1,15 +1,20 @@
 .page-footer {
-  .container;
-  padding-left: 0;
-  padding-right: 0;
+  width: @mobile-width;
+  margin: 0 auto;
   background-color: @bg-footer-grey;
   padding-bottom: 32px;
 }
 
 .page-footer__heading {
+  .wrapper;
   text-align: center;
   color: @black-text;
   text-transform: uppercase;
   padding-top: 39px;
   padding-bottom: 32px;
+}
+
+.page-footer__social,
+.page-footer__copyright {
+  .wrapper;
 }
