--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -1,7 +1,6 @@
 .social__list {
-  .wrapper;
   list-style: none;
-  padding: 20px 0;
+  padding: 0;
   margin: 0;
   display: flex;
   justify-content: center;
