--- a/source/less/blocks/index/example-result.less
+++ b/source/less/blocks/index/example-result.less
@@ -11,9 +11,9 @@
   flex-direction: column;
   align-items: center;
   width: 122px;
-  margin-bottom: 25px;
   border-radius: 5px;
   margin-right: 30px;
+  margin-bottom: 25px;
 
   &:nth-child(2) {
     margin-right: 0;
@@ -21,7 +21,6 @@
 }
 
 .example-result__count {
-  font-family: @decor-font;
   font-size: 24px;
   line-height: 24px;
   color: @basic-black;
@@ -32,6 +31,7 @@
 }
 
 .example-result__text {
+  font-family: @base-font;
   font-size: 12px;
   line-height: 12px;
   text-align: center;
