--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,10 +1,11 @@
-.programs__wrapper {
+.programs {
   .wrapper;
 }
 
 .programs__button {
   .button;
   font-size: 14px;
+  line-height: 18px;
   width: 192px;
   padding: 7px 44px;
   margin-bottom: 22px;
@@ -17,19 +18,20 @@
 }
 
 .programs__card {
-  display: flex;
-  flex-direction: column;
   background-color: @basic-grey;
+  padding-top: 25px;
+  padding-bottom: 20px;
+  padding-left: 20px;
   margin-bottom: 20px;
 }
 
 .programs__title {
   .black-uppercase-text;
-  font-family: @decor-font;
   font-size: 24px;
   line-height: 37px;
+  margin-top: 0;
   margin-bottom: 20px;
-  padding-left: 91px;
+  padding-left: 70px;
   position: relative;
 
   &::before {
@@ -37,7 +39,7 @@
     content: "";
     width: 50px;
     height: 53px;
-    left: 20px;
+    left: 0;
     top: -10px;
     background-color: @green;
     border-radius: 50%;
@@ -45,20 +47,16 @@
 }
 
 .programs__description {
-  width: 227px;
-  margin-left: 20px;
-  padding-bottom: 23px;
-  margin-bottom: 15px;
+  .description;
+  padding-right: 33px;
+  margin-bottom: 39px;
 }
 
 .programs__link {
   .black-uppercase-text;
   display: block;
-  font-family: @decor-font;
   font-size: 16px;
   line-height: 16px;
-  margin-bottom: 18px;
-  margin-left: 20px;
   position: relative;
 
 
