--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -7,9 +7,8 @@ body {
   min-height: 100%;
   margin: 0 auto;
   padding: 0;
-  font-family: @base-font;
+  font-family: @decor-font;
   font-size: 14px;
-  line-height: 18px;
   font-weight: 400;
   color: @special-dark-grey;
   background-color: @basic-white;
