исправление стилизации каталога

--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -1,5 +1,6 @@
 .catalog-main {
-  .wrapper;
+  width: @mobile-width;
+  margin: 0 auto;
 }
 
 .catalog-main__heading {
@@ -8,4 +9,5 @@
   padding-left: 20px;
   margin-top: 0;
   margin-bottom: 41px;
+  color: @basic-black;
 }
