--- a/source/less/blocks/catalog/products-big-list.less
+++ b/source/less/blocks/catalog/products-big-list.less
@@ -8,8 +8,12 @@
   text-align: center;
 
   &--bold {
-    .product-name;
+    font-family: @decor-font;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
     color: @black-text;
+    text-transform: uppercase;
   }
 }
 
@@ -17,7 +21,7 @@
   .button;
   color: @special-dark-grey;
   width: 91px;
-  padding: 10px 94px;
+  padding: 20px 94px;
   margin-bottom: 25px;
   background-color: @basic-grey;
 }
