--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -51,6 +51,8 @@
   text-transform: uppercase;
   color: @basic-white;
   background-color: @green;
+  width: 62px;
+  padding: 10px 109px;
 }
 
 .black-uppercase-text() {
@@ -63,9 +65,13 @@
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
+  font-weight: 400;
+  color: @special-dark-text;
 }
 
 .product-info() {
+  font-family: @base-font;
   font-size: 12px;
   line-height: 16px;
+  color: @special-dark-grey;
 }
