--- a/source/less/blocks/catalog/extra-products.less
+++ b/source/less/blocks/catalog/extra-products.less
@@ -1,20 +1,10 @@
 .extra-products__heading {
-  .page-heading;
   font-size: 24px;
   line-height: 24px;
+  font-weight: 400;
+  color: @basic-black;
   margin-bottom: 35px;
   padding-left: 20px;
-  display: flex;
-  align-items: center;
-
-  &::after {
-    content: "";
-    flex-grow: 1;
-    flex-shrink: 0;
-    height: 2px;
-    margin-left: 22px;
-    background-color: @green;
-  }
 }
 
 .extra-products__list {
@@ -25,26 +15,24 @@
 }
 
 .extra-products__item {
-  padding-left: 20px;
-  padding-right: 20px;
+  .wrapper;
 }
 
 .extra-products__name {
   .product-name;
   line-height: 16px;
-  color: @special-dark-text;
 }
 
 .extra-products__link {
   .button;
-  width: 62px;
-  padding: 10px 109px;
   margin-bottom: 25px;
 }
 
 .extra-products__info {
+  font-family: @base-font;
   font-size: 14px;
   line-height: 14px;
+  color: @special-dark-grey;
   width: 280px;
   margin-bottom: 15px;
 }
@@ -54,16 +42,20 @@
   text-align: right;
 }
 
-.extra-products__text {
+.extra-products__wrapper {
+  .wrapper;
+  font-family: @base-font;
   font-size: 16px;
   line-height: 20px;
-  text-align: center;
   color: @basic-white;
   background-color: @green;
-  width: 161px;
   padding-top: 186px;
-  padding-left: 60px;
   padding-bottom: 43px;
-  padding-right: 60px;
+  text-align: center;
   margin-bottom: 35px;
+}
+
+.extra-products__text {
+  width: 161px;
+  margin: 0 auto;
 }
