--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -7,12 +7,8 @@
   flex-direction: column;
 }
 
-.products__item {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
 .products__card {
+  .wrapper;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -27,7 +23,6 @@
 .products__name-link {
   .product-name;
   display: block;
-  color: @special-dark-text;
   width: 76px;
   margin-bottom: 14px;
 }
@@ -38,13 +33,8 @@
   width: 140px;
 }
 
-.products__data {
-  padding-right: 20px;
-}
-
 .products__value {
   text-align: right;
-  padding-left: 30px;
 
   &--price {
     text-transform: uppercase;
@@ -53,7 +43,5 @@
 
 .products__link {
   .button;
-  width: 62px;
-  padding: 10px 109px;
   margin-bottom: 25px;
 }
